name:            futil-scripts
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        little scripts that used to be in FUtil
build-type:      Simple
build-depends:   FUtil, array, base

executable:      align
main-is:         align.hs
hs-source-dirs:  src

executable:      sorth
main-is:         sorth.hs
hs-source-dirs:  src

executable:      wordSwap
main-is:         wordSwap.hs
hs-source-dirs:  src
